[package]
name = "rust-webhooks"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "*"
actix-rt = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
postgres = { version = "*", features = [ "with-serde_json-1" ] }
tokio-postgres = "*"
bb8 = "*"
bb8-postgres = "*"
toml = "*"
config = "*"